GNOME Bugzilla – Bug 678175
[Patch] Memory leak in GtkImage
Last modified: 2012-06-20 06:28:40 UTC
Created attachment 216527 [details] [review] Fix priv->filename is not free()'d in gtk_image_finalize() causing a memory leak
Review of attachment 216527 [details] [review]: This is a recent regression from the iconhelper conversion. ::: gtk/gtkimage.c @@ +370,3 @@ + g_free (image->priv->filename); + image->priv->filename = NULL; + } You can just do g_free (image->priv->filename); here. finalize can't be called more than once, and g_free handles NULL just fine.
Created attachment 216668 [details] [review] Fixed patch Aaah right, fixed :-)
Review of attachment 216668 [details] [review]: looks fine
Comment on attachment 216668 [details] [review] Fixed patch Committed to git master as 4243c3a1e239c9f8e6fd5780ff8b00dcbbb4d41e http://git.gnome.org/browse/gtk+/commit/?id=4243c3a1e239c9f8e6fd5780ff8b00dcbbb4d41e