Fix a memory leak in GtkImage

https://bugzilla.gnome.org/show_bug.cgi?id=678175